syntax = "proto3";

package graplinc.grapl.api.organization_management.v1beta1;

import "graplinc/common/v1beta1/types.proto";

message CreateOrganizationRequest {
  string organization_display_name = 1;
  string admin_username = 2;
  string admin_email = 3;
  bytes admin_password = 4;
  bool should_reset_password = 5;
}

message CreateOrganizationResponse {
  graplinc.common.v1beta1.Uuid organization_id = 1;

}

message CreateUserRequest {
  graplinc.common.v1beta1.Uuid organization_id = 1;
  string name = 2;
  string email = 3;
  bytes password = 4;
}

message CreateUserResponse {
  graplinc.common.v1beta1.Uuid user_id = 1;
}


service OrganizationManagementService {
  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse);

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}